--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node mcp_server.js",
     "test": "node test_tools.js",
+    "coverage": "nyc --reporter=text node test_tools.js",
     "test-monitoring": "node test_monitoring.js",
     "generate-data": "node data/generate_attack_data.js",
     "demo": "node agent.js",
@@ -34,5 +35,8 @@
     "express": "^5.2.1",
     "node-fetch": "^3.3.2",
     "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "nyc": "^17.1.0"
   }
 }
